--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,3 +1,47 @@
-ion-content ion-toolbar {
-  --background: translucent;
+ion-content {
+  --background: #fafafa;
+}
+ion-header::after {
+  background-image: none;
+}
+ion-title {
+  text-align: center;
+  min-height: 30px; 
+  font-size: 14px;
+}
+ion-header ion-toolbar {
+  height: 35px; 
+}
+.nome {
+  padding-left: 10px;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+}
+.endereco {
+  padding-left: 10px;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+}
+.editar {
+  padding-left: 10px;
+  font-size: 13px;
+  color: #c0c0c0;
+  letter-spacing: 0.5px;
+}
+.btnPrimary {
+  background: var(--ion-color-primary);
+  color: var(--ion-color-primary-contrast);
+  border-radius: 20px;
+  font-size: 14px;
+  margin: 0;
+  min-height: 40px;
+  width: 100%;
+}
+.padding {
+  padding: 10px;
+}
+
+.bottom {
+  padding-bottom: 50px;
 }
