--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,28 @@
 <ion-tabs>
 
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" id="ion-fab">
+    <ion-fab-button (click)="openCart()" #cart>
+      <ion-icon name="basket-outline" class="cart-icon"></ion-icon>
+      <div class="cart-length">{{ cartItemCount | async }}</div>
+      <div class="ver">Ver cesta</div>
+      <div class="valor">{{ getTotal().toFixed(2).replace('.',',') }}</div>
+    </ion-fab-button>
+  </ion-fab>
+
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Início</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="tab2" id="tab2">
+      <ion-icon name="reader-outline"></ion-icon>
+      <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="tab3" id="tab3">
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
